[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Themes/Main/theme.tres" type="Theme" id=1]
[ext_resource path="res://Source/DifficultyMenu/DifficultyMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/hover.wav" type="AudioStream" id=3]

[node name="DifficultyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -50.0
margin_right = 65.0
margin_bottom = 50.0
alignment = 1

[node name="EasyButton" type="Button" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 130.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "Easy"

[node name="NormalButton" type="Button" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 130.0
margin_bottom = 60.0
theme = ExtResource( 1 )
text = "Normal"

[node name="HardButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 130.0
margin_bottom = 85.0
theme = ExtResource( 1 )
text = "Hard"
